# AdvancedTicTacToe

./: .gitignore  CMakeLists.txt  resources.qrc  resources.qrc.autosave  user-auth-impl.cpp  user_auth.h
.github/workflows/: main.yml
Docs/: Performance Benchmark and Optimization Report.md  SDS.md  SRS.md  Testing_Documentation.md
Resources/: README.md
include/: ai_engine.h  database_manager.h  game_history.h  game_logic.h  gui_interface.h  user_auth.h
src/: ai_engine.cpp  database_manager.cpp  game_history.cpp  game_logic.cpp  gui_interface.cpp  main.cpp  user_auth.cpp
tests/: benchmark.cpp  test_suite.cpp
